--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  atompaynetz: ^0.0.1
+  atompaynetz: 
+    path: ../
    
 
   # The following adds the Cupertino Icons font to your application.
