--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,8 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  atompaynetz: 
-    path: ../
+  atompaynetz: ^0.0.2
    
 
   # The following adds the Cupertino Icons font to your application.
