--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,9 +1,9 @@
-name: atompaynetzkit
-description: A new Flutter project.
+name: flutter_app
+description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+# publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -23,18 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  atompaynetz: ^0.0.2
-   
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-
+  # cupertino_icons: ^0.1.3
+  atompaynetz: ^0.0.5
+  flutter_webview_plugin: ^0.3.11
+  fluttertoast: ^7.0.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  fluttertoast: ^3.0.4
-  flutter_webview_plugin: ^0.3.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
